fixed img overflow on home app page

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@
 }
 
 .campusimage{
-  height: 650px;
-  width: 1450px;
+  height: 50%;
+  width: 70%;
   margin-top: 50px;
+  text-align: center;
+  margin: auto;
+  display: block;
 }
